2/27/24 resolved an issue where projdash showed some horizontal overflow.

--- a/PMT/PMT/wwwroot/css/styleDash.css
+++ b/PMT/PMT/wwwroot/css/styleDash.css
@@ -448,6 +448,7 @@ select {
 }
 .side-nav label {
   margin-bottom: 1vh;
+  text-align: center;
 }
 .side-nav .nav-item:first-of-type {
   margin-top: 1vh;
